<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--android:icon="@android:drawable/ic_menu_add"-->
    <item
        android:id="@+id/menu_add"
        android:title="@string/add_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/checkBox_pressure"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/pressure"
        app:showAsAction="never" />
    <item
        android:id="@+id/checkBox_weather_icon"
        android:checkable="true"
        android:orderInCategory="3"
        android:title="@string/weather_picture"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/clear_menu"
        app:showAsAction="never" />
</menu>